[tool.poetry]
name = "train-images"
version = "0.1.0"
description = ""
authors = ["Davvos11 <vosdavid2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pillow = "^10.3.0"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
